--- a/resources/assets/resourcefulbees/lang/en_us.json
+++ b/resources/assets/resourcefulbees/lang/en_us.json
@@ -11,10 +11,10 @@
     "item.resourcefulbees.lapis_honeycomb" : "Lapis Honeycomb",
     "item.resourcefulbees.lapis_bee_spawn_egg" : "Lapis Bee Spawn Egg",
     "entity.resourcefulbees.lapis_bee" : "Lapis Bee",
-    "block.resourcefulbees.crystal_honeycomb_block" : "Crystal Honeycomb Block",
-    "item.resourcefulbees.crystal_honeycomb" : "Crystal Honeycomb",
-    "item.resourcefulbees.crystal_bee_spawn_egg" : "Crystal Bee Spawn Egg",
-    "entity.resourcefulbees.crystal_bee" : "Crystal Bee",
+    "block.resourcefulbees.quartz_honeycomb_block" : "Quartz Honeycomb Block",
+    "item.resourcefulbees.quartz_honeycomb" : "Quartz Honeycomb",
+    "item.resourcefulbees.quartz_bee_spawn_egg" : "Quartz Bee Spawn Egg",
+    "entity.resourcefulbees.quartz_bee" : "Quartz Bee",
     "block.resourcefulbees.allthemodium_honeycomb_block" : "Allthemodium Honeycomb Block",
     "item.resourcefulbees.allthemodium_honeycomb" : "Allthemodium Honeycomb",
     "item.resourcefulbees.allthemodium_bee_spawn_egg" : "Allthemodium Bee Spawn Egg",
@@ -167,10 +167,10 @@
     "item.resourcefulbees.sandy_honeycomb" : "Sandy Honeycomb",
     "item.resourcefulbees.sandy_bee_spawn_egg" : "Sandy Bee Spawn Egg",
     "entity.resourcefulbees.sandy_bee" : "Sandy Bee",
-    "block.resourcefulbees.warm_honeycomb_block" : "Warm Honeycomb Block",
-    "item.resourcefulbees.warm_honeycomb" : "Warm Honeycomb",
-    "item.resourcefulbees.warm_bee_spawn_egg" : "Warm Bee Spawn Egg",
-    "entity.resourcefulbees.warm_bee" : "Warm Bee",
+    "block.resourcefulbees.breezy_honeycomb_block" : "Breezy Honeycomb Block",
+    "item.resourcefulbees.breezy_honeycomb" : "Breezy Honeycomb",
+    "item.resourcefulbees.breezy_bee_spawn_egg" : "Breezy Bee Spawn Egg",
+    "entity.resourcefulbees.breezy_bee" : "Breezy Bee",
     "block.resourcefulbees.blazing_honeycomb_block" : "Blazing Honeycomb Block",
     "item.resourcefulbees.blazing_honeycomb" : "Blazing Honeycomb",
     "item.resourcefulbees.blazing_bee_spawn_egg" : "Blazing Bee Spawn Egg",
@@ -187,14 +187,14 @@
     "item.resourcefulbees.wither_honeycomb" : "Wither Honeycomb",
     "item.resourcefulbees.wither_bee_spawn_egg" : "Wither Bee Spawn Egg",
     "entity.resourcefulbees.wither_bee" : "Wither Bee",
-    "block.resourcefulbees.withered_honeycomb_block" : "Withered Honeycomb Block",
-    "item.resourcefulbees.withered_honeycomb" : "Withered Honeycomb",
-    "item.resourcefulbees.withered_bee_spawn_egg" : "Withered Bee Spawn Egg",
-    "entity.resourcefulbees.withered_bee" : "Withered Bee",
-    "block.resourcefulbees.creeper_honeycomb_block" : "Beeper Honeycomb Block",
-    "item.resourcefulbees.creeper_honeycomb" : "Beeper Honeycomb",
-    "item.resourcefulbees.creeper_bee_spawn_egg" : "Beeper Spawn Egg",
-    "entity.resourcefulbees.creeper_bee" : "Beeper",
+    "block.resourcefulbees.withered_spooky_honeycomb_block" : "Withered Spooky Honeycomb Block",
+    "item.resourcefulbees.withered__spooky_honeycomb" : "Withered Spooky Honeycomb",
+    "item.resourcefulbees.withered_spooky_bee_spawn_egg" : "Withered Spooky Bee Spawn Egg",
+    "entity.resourcefulbees.withered_spooky_bee" : "Withered Spooky Bee",
+    "block.resourcefulbees.beeper_honeycomb_block" : "Beeper Honeycomb Block",
+    "item.resourcefulbees.beeper_honeycomb" : "Beeper Honeycomb",
+    "item.resourcefulbees.beeper_bee_spawn_egg" : "Beeper Spawn Egg",
+    "entity.resourcefulbees.beeper_bee" : "Beeper",
     "block.resourcefulbees.ender_honeycomb_block" : "Ender Honeycomb Block",
     "item.resourcefulbees.ender_honeycomb" : "Ender Honeycomb",
     "item.resourcefulbees.ender_bee_spawn_egg" : "Ender Bee Spawn Egg",
@@ -207,18 +207,18 @@
     "item.resourcefulbees.magma_honeycomb" : "Magma Honeycomb",
     "item.resourcefulbees.magma_bee_spawn_egg" : "Magma Bee Spawn Egg",
     "entity.resourcefulbees.magma_bee" : "Magma Bee",
-    "block.resourcefulbees.skeleton_honeycomb_block" : "Spooky Honeycomb Block",
-    "item.resourcefulbees.skeleton_honeycomb" : "Spooky Honeycomb",
-    "item.resourcefulbees.skeleton_bee_spawn_egg" : "Spooky Bee Spawn Egg",
-    "entity.resourcefulbees.skeleton_bee" : "Spooky Bee",
+    "block.resourcefulbees.spooky_honeycomb_block" : "Spooky Honeycomb Block",
+    "item.resourcefulbees.spooky_honeycomb" : "Spooky Honeycomb",
+    "item.resourcefulbees.spooky_bee_spawn_egg" : "Spooky Bee Spawn Egg",
+    "entity.resourcefulbees.spooky_bee" : "Spooky Bee",
     "block.resourcefulbees.slimy_honeycomb_block" : "Slimy Honeycomb Block",
     "item.resourcefulbees.slimy_honeycomb" : "Slimy Honeycomb",
     "item.resourcefulbees.slimy_bee_spawn_egg" : "Slimy Bee Spawn Egg",
     "entity.resourcefulbees.slimy_bee" : "Slimy Bee",
-    "block.resourcefulbees.zombie_honeycomb_block" : "Zombee Honeycomb Block",
-    "item.resourcefulbees.zombie_honeycomb" : "Zombee Honeycomb",
-    "item.resourcefulbees.zombie_bee_spawn_egg" : "Zombee Spawn Egg",
-    "entity.resourcefulbees.zombie_bee" : "Zombee",
+    "block.resourcefulbees.zombee_honeycomb_block" : "Zombee Honeycomb Block",
+    "item.resourcefulbees.zombee_honeycomb" : "Zombee Honeycomb",
+    "item.resourcefulbees.zombee_bee_spawn_egg" : "Zombee Spawn Egg",
+    "entity.resourcefulbees.zombee_bee" : "Zombee",
     "block.resourcefulbees.water_honeycomb_block" : "Water Honeycomb Block",
     "item.resourcefulbees.water_honeycomb" : "Water Honeycomb",
     "item.resourcefulbees.water_bee_spawn_egg" : "Water Bee Spawn Egg",
