--- a/resources/assets/resourcefulbees/lang/en_us.json
+++ b/resources/assets/resourcefulbees/lang/en_us.json
@@ -235,14 +235,14 @@
     "item.resourcefulbees.pumpkin_honeycomb" : "Pumpkin Honeycomb",
     "item.resourcefulbees.pumpkin_bee_spawn_egg" : "Pumpkin Bee Spawn Egg",
     "entity.resourcefulbees.pumpkin_bee" : "Pumpkin Bee",
-    "block.resourcefulbees.sugarcane_honeycomb_block" : "Sweet Honeycomb Block",
-    "item.resourcefulbees.sugarcane_honeycomb" : "Sweet Honeycomb",
-    "item.resourcefulbees.sugarcane_bee_spawn_egg" : "Sweet Bee Spawn Egg",
-    "entity.resourcefulbees.sugarcane_bee" : "Sweet Bee",
-    "block.resourcefulbees.netherwart_honeycomb_block" : "Awkward Honeycomb Block",
-    "item.resourcefulbees.netherwart_honeycomb" : "Awkward Honeycomb",
-    "item.resourcefulbees.netherwart_bee_spawn_egg" : "Awkward Bee Spawn Egg",
-    "entity.resourcefulbees.netherwart_bee" : "Awkward Bee",
+    "block.resourcefulbees.sweet_honeycomb_block" : "Sweet Honeycomb Block",
+    "item.resourcefulbees.sweet_honeycomb" : "Sweet Honeycomb",
+    "item.resourcefulbees.sweet_bee_spawn_egg" : "Sweet Bee Spawn Egg",
+    "entity.resourcefulbees.sweet_bee" : "Sweet Bee",
+    "block.resourcefulbees.netherwart_honeycomb_block" : "Netherwart Honeycomb Block",
+    "item.resourcefulbees.netherwart_honeycomb" : "Netherwart Honeycomb",
+    "item.resourcefulbees.netherwart_bee_spawn_egg" : "Netherwart Bee Spawn Egg",
+    "entity.resourcefulbees.netherwart_bee" : "Netherwart Bee",
     "block.resourcefulbees.nether_banana_honeycomb_block" : "Nether Banana Honeycomb Block",
     "item.resourcefulbees.nether_banana_honeycomb" : "Nether Banana Honeycomb",
     "item.resourcefulbees.nether_banana_bee_spawn_egg" : "Nether Banana Bee Spawn Egg",
@@ -671,10 +671,10 @@
     "item.resourcefulbees.aluminum_steel_bee_spawn_egg" : "Aluminum Steel Bee Spawn Egg",
     "item.resourcefulbees.aluminum_steel_honeycomb" : "Aluminum Steel Honeycomb",
     "block.resourcefulbees.aluminum_steel_honeycomb_block" : "Aluminum Steel Honeycomb Block",
-	"entity.resourcefulbees.arcane_bee" : "Arcane Bee",
-    "item.resourcefulbees.arcane_bee_spawn_egg" : "Arcane Bee Spawn Egg",
-    "item.resourcefulbees.arcane_honeycomb" : "Arcane Honeycomb",
-    "block.resourcefulbees.arcane_honeycomb_block" : "Arcane Honeycomb Block",
+	"entity.resourcefulbees.mana_gem_bee" : "Mana Gem Bee",
+    "item.resourcefulbees.mana_gem_bee_spawn_egg" : "Mana Gem Bee Spawn Egg",
+    "item.resourcefulbees.mana_gem_honeycomb" : "Mana Gem Honeycomb",
+    "block.resourcefulbees.mana_gem_honeycomb_block" : "Mana Gem Honeycomb Block",
 	"entity.resourcefulbees.basalz_bee" : "Basalz Bee",
     "item.resourcefulbees.basalz_bee_spawn_egg" : "Basalz Bee Spawn Egg",
     "item.resourcefulbees.basalz_honeycomb" : "Basalz Honeycomb",
