--- a/resources/assets/resourcefulbees/lang/en_us.json
+++ b/resources/assets/resourcefulbees/lang/en_us.json
@@ -135,10 +135,10 @@
     "item.resourcefulbees.glowing_honeycomb" : "Glowing Honeycomb",
     "item.resourcefulbees.glowing_bee_spawn_egg" : "Glowing Bee Spawn Egg",
     "entity.resourcefulbees.glowing_bee" : "Glowing Bee",
-    "block.resourcefulbees.leafcutter_honeycomb_block" : "Leafy Honeycomb Block",
-    "item.resourcefulbees.leafcutter_honeycomb" : "Leafy Honeycomb",
-    "item.resourcefulbees.leafcutter_bee_spawn_egg" : "Leafy Bee Spawn Egg",
-    "entity.resourcefulbees.leafcutter_bee" : "Leafy Bee",
+    "block.resourcefulbees.leafy_honeycomb_block" : "Leafy Honeycomb Block",
+    "item.resourcefulbees.leafy_honeycomb" : "Leafy Honeycomb",
+    "item.resourcefulbees.leafy_bee_spawn_egg" : "Leafy Bee Spawn Egg",
+    "entity.resourcefulbees.leafy_bee" : "Leafy Bee",
     "block.resourcefulbees.lumber_honeycomb_block" : "Lumber Honeycomb Block",
     "item.resourcefulbees.lumber_honeycomb" : "Lumber Honeycomb",
     "item.resourcefulbees.lumber_bee_spawn_egg" : "Lumber Bee Spawn Egg",
