--- a/resources/assets/resourcefulbees/lang/en_us.json
+++ b/resources/assets/resourcefulbees/lang/en_us.json
@@ -541,5 +541,25 @@
 	"entity.resourcefulbees.book_bee" : "Book Bee",
     "item.resourcefulbees.book_bee_spawn_egg" : "Book Bee Spawn Egg",
     "item.resourcefulbees.book_honeycomb" : "Book Honeycomb",
-    "block.resourcefulbees.book_honeycomb_block" : "Book Honeycomb Block"
+    "block.resourcefulbees.book_honeycomb_block" : "Book Honeycomb Block",
+    "entity.resourcefulbees.glyph_bee" : "Glyph Bee",
+    "item.resourcefulbees.glyph_bee_spawn_egg" : "Glyph Bee Spawn Egg",
+    "item.resourcefulbees.glyph_honeycomb" : "Glyph Honeycomb",
+    "block.resourcefulbees.glyph_honeycomb_block" : "Glyph Honeycomb Block",
+    "entity.resourcefulbees.vinteum_bee" : "Vinteum Bee",
+    "item.resourcefulbees.vinteum_bee_spawn_egg" : "Vinteum Bee Spawn Egg",
+    "item.resourcefulbees.vinteum_honeycomb" : "Vinteum Honeycomb",
+    "block.resourcefulbees.vinteum_honeycomb_block" : "Vinteum Honeycomb Block",
+    "entity.resourcefulbees.blood_bee" : "Blood Bee",
+    "item.resourcefulbees.blood_bee_spawn_egg" : "Blood Bee Spawn Egg",
+    "item.resourcefulbees.blood_honeycomb" : "Blood Honeycomb",
+    "block.resourcefulbees.blood_honeycomb_block" : "Blood Honeycomb Block",
+    "entity.resourcefulbees.human_heart_bee" : "Human Heart Bee",
+    "item.resourcefulbees.human_heart_bee_spawn_egg" : "Human Heart Bee Spawn Egg",
+    "item.resourcefulbees.human_heart_honeycomb" : "Human Heart Honeycomb",
+    "block.resourcefulbees.human_heart_honeycomb_block" : "Human Heart Honeycomb Block",
+    "entity.resourcefulbees.kingmaker_bee" : "Kingmaker Bee",
+    "item.resourcefulbees.kingmaker_bee_spawn_egg" : "Kingmaker Bee Spawn Egg",
+    "item.resourcefulbees.kingmaker_honeycomb" : "Kingmaker Honeycomb",
+    "block.resourcefulbees.kingmaker_honeycomb_block" : "Kingmaker Honeycomb Block"
 }
